--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ p{
     height: 280px;
     width: 300px;
     width:300px;
-    display: block;
+    display: none;
     margin-top: 20px;
     border-radius: 5px;
     margin-left: 20px;
